syntax = "proto3";

option csharp_namespace = "BlazorGrpcWeb.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service WeatherForecastStreamingService {
	rpc GetWeatherStream(google.protobuf.Empty) returns (stream WeatherForecastStreamDTO);
}

message WeatherForecastStreamDTO
{
	google.protobuf.Timestamp Date = 1;
	int32 TemperatureC = 2;
	string Summary = 3;
}

 